--- a/app/src/main/res/layout/controller_my_media.xml
+++ b/app/src/main/res/layout/controller_my_media.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
     <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -18,7 +15,7 @@
                 android:layout_height="match_parent"
                 android:layout_alignParentStart="true"
                 android:background="@null"
-                android:src="@drawable/btn_nav_back_n"/>
+                android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha"/>
 
             <TextView
                 android:id="@+id/mediacontroller_file_name"
@@ -26,38 +23,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="5dp"
-                android:layout_toRightOf="@+id/mediacontroller_top_back"
+                android:layout_marginStart="5dp"
+                android:layout_toEndOf="@+id/mediacontroller_top_back"
                 android:ellipsize="marquee"
                 android:maxLines="1"
-                android:text="file name"/>
-
-            <ImageButton
-                android:id="@+id/mediacontroller_collect_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_star_border_black_24dp"
-                android:layout_marginLeft="5dp"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@id/mediacontroller_file_name"/>
-
-            <ImageButton
-                android:id="@+id/mediacontroller_download_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_file_download_black_24dp"
-                android:layout_marginLeft="5dp"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@id/mediacontroller_collect_button"/>
+                android:text="@string/fileName"/>
 
             <TextView
                 android:id="@+id/mediacontroller_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="5dp"
-                android:text="17:22"
+                android:layout_marginEnd="5dp"
+                android:text=""
                 android:textColor="#ffffff"
                 android:textSize="15sp"/>
 
@@ -66,8 +45,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="5dp"
-                android:layout_toLeftOf="@+id/mediacontroller_time"
+                android:layout_marginEnd="5dp"
+                android:layout_toStartOf="@+id/mediacontroller_time"
                 android:gravity="center_vertical"
                 android:src="@drawable/battery"/>
 
@@ -76,10 +55,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="-10dp"
-                android:layout_toLeftOf="@+id/mediacontroller_imgBattery"
+                android:layout_marginEnd="-10dp"
+                android:layout_toStartOf="@+id/mediacontroller_imgBattery"
                 android:gravity="center_vertical"
-                android:text="45%"
+                android:text=""
                 android:textColor="#ffffff"
                 android:textSize="15sp"/>
         </RelativeLayout>
@@ -108,9 +87,9 @@
                 android:layout_alignBottom="@+id/operation_bg"
                 android:layout_centerHorizontal="true"
                 android:layout_alignParentBottom ="true"
-                android:text="32:22/45:00"
+                android:text=""
                 android:textColor="#ffffff"
-                android:textSize="10sp"
+                android:textSize="12sp"
                 android:visibility="gone"
                 />
 
@@ -129,7 +108,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
                 android:background="@drawable/mediacontroller_button"
                 android:contentDescription="@string/mediacontroller_play_pause"
                 android:src="@drawable/mediacontroller_pause"/>
@@ -140,29 +119,28 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="5dp"
-                android:layout_toRightOf="@id/mediacontroller_play_pause"
-                android:text="33:33:33"
+                android:layout_marginStart="5dp"
+                android:layout_toEndOf="@id/mediacontroller_play_pause"
+                android:text=""
                 />
             <TextView
                 android:id="@+id/mediacontroller_time_total"
                 style="@style/MediaController_Text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="5dp"
-                android:text="33:33:33"/>
+                android:layout_marginEnd="5dp"
+                android:text=""/>
             <SeekBar
                 android:id="@+id/mediacontroller_seekbar"
                 style="@style/MediaController_SeekBar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_toLeftOf="@id/mediacontroller_time_total"
-                android:layout_toRightOf="@id/mediacontroller_time_current"
+                android:layout_toStartOf="@id/mediacontroller_time_total"
+                android:layout_toEndOf="@id/mediacontroller_time_current"
                 android:focusable="true"
                 android:max="1000"/>
         </RelativeLayout>
     </RelativeLayout>
-</LinearLayout>
