--- a/app/src/main/res/layout/recycler_animate_category.xml
+++ b/app/src/main/res/layout/recycler_animate_category.xml
@@ -8,14 +8,15 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="0.7"
-        android:text="这是标题"
         android:id="@+id/category_name"
         android:textSize="20sp"
         android:gravity="center_vertical"/>
     <Button
         android:id="@+id/category_click_more"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="0.3"
-        android:text="更多"/>
+        android:textColor="#FFFFFF"
+        android:background="@drawable/shape_corner"
+        android:text="@string/more"/>
 </LinearLayout>
